# text-generation-assistant

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  compose.production.yaml  compose.yaml  docker-compose.yaml  pyproject.toml
backend/: .dockerignore  Dockerfile
backend/src/: bootstrap.py  routes.py  settings.py
backend/src/baml_src/: clients.baml  ner_entities.baml  recommendation.baml  resume.baml
backend/src/models/: __init__.py  file.py  ner.py
backend/src/repositories/: base_repository.py  file_repository.py  letter_repository.py  user_entity_repository.py  user_entity_research_repository.py
backend/src/schemas/: files.py  ner.py  recommendation.py
backend/src/services/: entity_research_service.py  letter_export_service.py  ner_service.py  resume_parser_service.py  (+4 more)
frontend/: .env.sample  Dockerfile  Dockerfile.production  index.html  nginx.production.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: config.ts  index.css  main.jsx
src/: bootstrap.py  logger.py  routes.py  settings.py
src/baml_src/: recommendation.baml  resume.baml
src/models/: __init__.py  mixins.py  ner.py  user_entity_selection.py
src/ner/: ner_patterns.py
src/repositories/: base_repository.py  ner_repository.py  recommendation_repository.py  user_entity_repository.py
src/schemas/: generation.py  ner.py
src/services/: entity_research_service.py  ner_service.py  rag_service.py  recommendation_service.py  resume_export_service.py  resume_parser_service.py  resume_service.py  user_entity_service.py  vector_store_service.py
(+30 files in other folders)
